--- a/.gitignore
+++ b/.gitignore
@@ -245,4 +245,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+secrets.json
 # End of https://www.toptal.com/developers/gitignore/api/python,django,windows,vscode
