Finish admin panel, add seed data and add urls

--- a/.gitignore
+++ b/.gitignore
@@ -245,5 +245,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+uploads/
+
 secrets.json
 # End of https://www.toptal.com/developers/gitignore/api/python,django,windows,vscode
